# CALC_D

./: CALC_D.slnx  CALC_D.vcxproj  CALC_D.vcxproj.filters  CMakeLists.txt  CMakeLists.txt.cmake  CMakeLists____.cmake.txt  LOG.txt  README.md  README.txt  arithmetic.cpp  balans.cpp  balans.h  bash.sh  bash_sborka_.sh  calculator.h  conversion.cpp  conversion.h  data.cpp  data.h  dop_file.txt  history.cpp  history_manager.cpp  history_manager.h  logarithms.cpp  logger.h  logic.cpp  main.cpp  other.cpp  string.cpp  string.h  trigonometric.cpp
cmake/: CMakeLists.txt
test/: test_accounting_entry.cpp  test_arithmetic.cpp  test_conversion.cpp  test_date.cpp  test_string_calculator.cpp  test_trigonometric.cpp
